Fix word wrap bug

--- a/mitosheet/css/elements/MultiToggleBox.css
+++ b/mitosheet/css/elements/MultiToggleBox.css
@@ -43,7 +43,7 @@
     color: var(--mito-status-warning-dark);
     font-size: 11px;
     padding-right: 4px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .multi-toggle-box-row {
